--- a/.env
+++ b/.env
@@ -30,9 +30,9 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
-MAIL_PORT=465
-MAIL_USERNAME=ksrprojhub@gmail.com
-MAIL_PASSWORD=ksr@Phub
+MAIL_PORT=587
+MAIL_USERNAME="ksrprojecthub@gmail.com"
+MAIL_PASSWORD=obqaqunztshfawdl
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="ksrprojecthub@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
